--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
   <div class=person-list>
     
     <div class="person">
-    <a href="speakers/chris-coyier.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/chris-coyier.jpg" alt="photo of Chris Coyier"/><div class="overlay">
+    <a href="speakers/chris-coyier.html"><div class="person-photo"><img src="/_static/images/speakers/chris-coyier.jpg" alt="photo of Chris Coyier"/><div class="overlay">
       <div class="text">The Web is Good Now</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Chris Coyier</div>
@@ -179,7 +179,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/mikeal-rogers.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/mikeal-rogers.jpg" alt="photo of Mikeal Rogers"/><div class="overlay">
+    <a href="speakers/mikeal-rogers.html"><div class="person-photo"><img src="/_static/images/speakers/mikeal-rogers.jpg" alt="photo of Mikeal Rogers"/><div class="overlay">
       <div class="text">Bringing Web3 to the Web</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Mikeal Rogers</div>
@@ -190,7 +190,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/shawn-swyx-wang.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/shawn-swyx-wang.jpg" alt="photo of Shawn (swyx) Wang"/><div class="overlay">
+    <a href="speakers/shawn-swyx-wang.html"><div class="person-photo"><img src="/_static/images/speakers/shawn-swyx-wang.jpg" alt="photo of Shawn (swyx) Wang"/><div class="overlay">
       <div class="text">Paradigm Lost</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Shawn (swyx) Wang</div>
@@ -201,7 +201,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/brian-leroux.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/brian-leroux.jpg" alt="photo of Brian Leroux"/><div class="overlay">
+    <a href="speakers/brian-leroux.html"><div class="person-photo"><img src="/_static/images/speakers/brian-leroux.jpg" alt="photo of Brian Leroux"/><div class="overlay">
       <div class="text">Enhance your Functional Web Apps with Web Components</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Brian Leroux</div>
@@ -212,7 +212,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/rachel-white.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/rachel-white.jpg" alt="photo of Rachel White"/><div class="overlay">
+    <a href="speakers/rachel-white.html"><div class="person-photo"><img src="/_static/images/speakers/rachel-white.jpg" alt="photo of Rachel White"/><div class="overlay">
       <div class="text">The 90s Called and They Want Their Websites Back</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Rachel White</div>
@@ -223,7 +223,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/tejas-kumar.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/tejas-kumar.jpg" alt="photo of Tejas Kumar"/><div class="overlay">
+    <a href="speakers/tejas-kumar.html"><div class="person-photo"><img src="/_static/images/speakers/tejas-kumar.jpg" alt="photo of Tejas Kumar"/><div class="overlay">
       <div class="text">Doing Data as a Frontend Developer</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Tejas Kumar</div>
@@ -234,7 +234,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/joyce-park.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/joyce-park.jpg" alt="photo of Joyce Park"/><div class="overlay">
+    <a href="speakers/joyce-park.html"><div class="person-photo"><img src="/_static/images/speakers/joyce-park.jpg" alt="photo of Joyce Park"/><div class="overlay">
       <div class="text">Rethinking Web UX with Webauthn and Project Fugu</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Joyce Park</div>
@@ -245,7 +245,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/trivikram-kamat.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/trivikram-kamat.jpg" alt="photo of Trivikram Kamat"/><div class="overlay">
+    <a href="speakers/trivikram-kamat.html"><div class="person-photo"><img src="/_static/images/speakers/trivikram-kamat.jpg" alt="photo of Trivikram Kamat"/><div class="overlay">
       <div class="text">Publishing in the JavaScript Ecosystem & Keeping Users Happy</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Trivikram Kamat</div>
@@ -256,7 +256,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/brooklyn-zelenka.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/brooklyn-zelenka.jpg" alt="photo of Brooklyn Zelenka"/><div class="overlay">
+    <a href="speakers/brooklyn-zelenka.html"><div class="person-photo"><img src="/_static/images/speakers/brooklyn-zelenka.jpg" alt="photo of Brooklyn Zelenka"/><div class="overlay">
       <div class="text">The Dark Forest: Private CRDTs as Global Database</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Brooklyn Zelenka</div>
@@ -267,7 +267,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/eddie-zaneski.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/eddie-zaneski.jpg" alt="photo of Eddie Zaneski"/><div class="overlay">
+    <a href="speakers/eddie-zaneski.html"><div class="person-photo"><img src="/_static/images/speakers/eddie-zaneski.jpg" alt="photo of Eddie Zaneski"/><div class="overlay">
       <div class="text">Cryptography Isn't Scary</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Eddie Zaneski</div>
@@ -278,7 +278,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/brittany-joiner.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/brittany-joiner.jpg" alt="photo of Brittany Joiner"/><div class="overlay">
+    <a href="speakers/brittany-joiner.html"><div class="person-photo"><img src="/_static/images/speakers/brittany-joiner.jpg" alt="photo of Brittany Joiner"/><div class="overlay">
       <div class="text">Making tech careers accessible for everyone</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Brittany Joiner</div>
@@ -289,7 +289,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/vladimir-de-turckheim.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/vladimir-de-turckheim.jpg" alt="photo of Vladimir de Turckheim"/><div class="overlay">
+    <a href="speakers/vladimir-de-turckheim.html"><div class="person-photo"><img src="/_static/images/speakers/vladimir-de-turckheim.jpg" alt="photo of Vladimir de Turckheim"/><div class="overlay">
       <div class="text">Join the super secret V8 club and become a JavaScriptbender</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Vladimir de Turckheim</div>
@@ -300,7 +300,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/rebecca-peltz.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/rebecca-peltz.jpg" alt="photo of Rebecca Peltz"/><div class="overlay">
+    <a href="speakers/rebecca-peltz.html"><div class="person-photo"><img src="/_static/images/speakers/rebecca-peltz.jpg" alt="photo of Rebecca Peltz"/><div class="overlay">
       <div class="text">Learning and Managing Code with Code Notebooks</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Rebecca Peltz</div>
@@ -311,7 +311,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/dwane-hemmings.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/dwane-hemmings.jpg" alt="photo of Dwane Hemmings"/><div class="overlay">
+    <a href="speakers/dwane-hemmings.html"><div class="person-photo"><img src="/_static/images/speakers/dwane-hemmings.jpg" alt="photo of Dwane Hemmings"/><div class="overlay">
       <div class="text">Creating a WebXR Tic-Tac-Toe game with Voice Chat on the Code of Giants</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Dwane Hemmings</div>
@@ -322,7 +322,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/joyce-lin.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/joyce-lin.jpg" alt="photo of Joyce Lin"/><div class="overlay">
+    <a href="speakers/joyce-lin.html"><div class="person-photo"><img src="/_static/images/speakers/joyce-lin.jpg" alt="photo of Joyce Lin"/><div class="overlay">
       <div class="text">Reverse Engineering a Private API</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Joyce Lin</div>
@@ -333,7 +333,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/aaroh-mankad.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/aaroh-mankad.jpg" alt="photo of Aaroh Mankad"/><div class="overlay">
+    <a href="speakers/aaroh-mankad.html"><div class="person-photo"><img src="/_static/images/speakers/aaroh-mankad.jpg" alt="photo of Aaroh Mankad"/><div class="overlay">
       <div class="text">The Next Generation of Tech is on Tiktok</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Aaroh Mankad</div>
@@ -344,7 +344,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/ian-sutherland.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/ian-sutherland.jpg" alt="photo of Ian Sutherland"/><div class="overlay">
+    <a href="speakers/ian-sutherland.html"><div class="person-photo"><img src="/_static/images/speakers/ian-sutherland.jpg" alt="photo of Ian Sutherland"/><div class="overlay">
       <div class="text">Zero-dependency CLIs with Node.js</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Ian Sutherland</div>
@@ -355,7 +355,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/daphne-liu.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/daphne-liu.jpg" alt="photo of Daphne Liu"/><div class="overlay">
+    <a href="speakers/daphne-liu.html"><div class="person-photo"><img src="/_static/images/speakers/daphne-liu.jpg" alt="photo of Daphne Liu"/><div class="overlay">
       <div class="text">How We Automated our Relationship</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Daphne Liu</div>
@@ -366,7 +366,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/tiger-oakes.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/tiger-oakes.jpg" alt="photo of Tiger Oakes"/><div class="overlay">
+    <a href="speakers/tiger-oakes.html"><div class="person-photo"><img src="/_static/images/speakers/tiger-oakes.jpg" alt="photo of Tiger Oakes"/><div class="overlay">
       <div class="text">How We Automated our Relationship</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Tiger Oakes</div>
@@ -377,7 +377,7 @@
     </div>
 
     <div class="person">
-    <a href="speakers/saimon-sharif.html"><div class="person-photo"><img src="https://create-4jr.begin.app/_static/2022/saimon-sharif.jpg" alt="photo of Saimon Sharif"/><div class="overlay">
+    <a href="speakers/saimon-sharif.html"><div class="person-photo"><img src="/_static/images/speakers/saimon-sharif.jpg" alt="photo of Saimon Sharif"/><div class="overlay">
       <div class="text">A Few Good Design Patterns</div></div></div></a>
       <div class="person-info">
         <div class="person-name">Saimon Sharif</div>
